==> Arrogantyunya/STM32_12Way_Irrigation_Controller/STM32_12Way_Irrigation_ControllerV5.1.0_beta/LoRa.cpp <==
#include "LoRa.h"
#include <libmaple/iwdg.h>
#include "fun_periph.h"
#include "Memory.h"

void LoRa::LoRa_GPIO_Config(void)
{
	pinMode(LORA_PWR_PIN, OUTPUT);
	LORA_PWR_ON;
	pinMode(AT_CMD_PIN, OUTPUT);
	pinMode(WAKEUP_PIN, OUTPUT);
	pinMode(RESET_PIN, OUTPUT);
	digitalWrite(WAKEUP_PIN, LOW);
	digitalWrite(RESET_PIN, HIGH);
	digitalWrite(AT_CMD_PIN, LOW);  //引脚上一直默认透传模式
}

void LoRa::LoRa_Shutdown(void)
{
	LORA_PWR_OFF;
	/*注意！，如果下面这个end()已经执行过一次，并且中途没有重启打开begin，第二次end()，会死机！*/
	LoRa_Serial.end();
	pinMode(PA2, OUTPUT); //TX
	pinMode(PA3, OUTPUT); //RX
	digitalWrite(PA2, LOW);
	digitalWrite(PA3, LOW);
	digitalWrite(RESET_PIN, LOW);
}

bool LoRa::LoRa_AT(unsigned char *data_buffer, bool is_query, const char *cmd, const char *para)
{
	unsigned char ReceiveLength = 0;
	unsigned char ReturnType;

	Mode(AT);

	iwdg_feed();

	/*根据指令是查询指令还是设置参数指令，分别进入不同的指令函数*/
	if (is_query == true)
		ReturnType = AT_Query_Cmd(cmd, data_buffer, &ReceiveLength);
	else
		ReturnType = AT_Config_Cmd(cmd, para, data_buffer);

	/*根据指令执行情况，返回对应状态。*/
	switch (ReturnType)
	{
	case ERROR: Debug_Serial.println("Receipt ERROR...");  Mode(PASS_THROUGH_MODE); return false; break;
	case Invalid: Debug_Serial.println("Involid!"); Mode(PASS_THROUGH_MODE); return false; break;

	case OK: Debug_Serial.println("Set para OK <LoRa_AT>"); break;
	case Bytes:for (unsigned char i = 0; i < ReceiveLength; i++)
				{
					Debug_Serial.print(data_buffer[i], HEX);
					Debug_Serial.print(" ");
				}
				Debug_Serial.println();
				break;
	}

	Mode(PASS_THROUGH_MODE);
	return true;
	iwdg_feed();
}

bool LoRa::Rewrite_ID(void)
{
	unsigned char RcvBuffer[8];
	char EP_Buffer[9] = { 0 };
	char WriteAddr[9];
	bool VerifyFlag = true;

	/*读取LoRa通信地址*/
	if (!LoRa_AT(RcvBuffer, true, AT_ADDR_, 0))
	{
		Debug_Serial.println("Read LoRa ADDR Err <Rewrite_ID>");
		return false;
	}

	for (unsigned char i = 0; i < 8; i++)
	{
		WriteAddr[i] = RcvBuffer[i];

		if (WriteAddr[i] >= 0 && WriteAddr[i] <= 9)
			WriteAddr[i] += '0';
		else if (WriteAddr[i] >= 10 && WriteAddr[i] <= 15)
			WriteAddr[i] += '7';
	}
	WriteAddr[8] = '\0';

	if (LoRa_Para_Config.Verify_LoRa_Addr_Flag())
	{
		Debug_Serial.println("Verify LoRa Addr <Rewrite_ID>");

		/* 如果读出来的LoRa地址正确 */
		if (LoRa_Para_Config.Read_LoRa_Addr((unsigned char *)EP_Buffer))
		{
			for (size_t i = 0; i < 8; i++)
			{
				/* 如果查询的LoRa地址和EP储存的不同 */
				if (WriteAddr[i] != EP_Buffer[i])
				{
					VerifyFlag = false;
					break;
				}
			}
			/* 重新写入EP储存的正确的地址 */
			if (!VerifyFlag)
			{
				Debug_Serial.println("LoRa addr for AT Error!, write EP addr to LoRa! <Rewrite_ID>");
				if (!LoRa_AT(RcvBuffer, false, AT_ADDR, EP_Buffer)){
					// Serial.println("!LoRa_AT(RcvBuffer, false, AT_ADDR, EP_Buffer)");
					return false;
				}
			}
			else
			{
				Debug_Serial.println("LoRa addr for AT Correct, OK <Rewrite_ID>");
				Debug_Serial.print("LoRa addr is:");
                    Debug_Serial.print(EP_Buffer[6]);
                    Debug_Serial.print(EP_Buffer[7]);
                    Debug_Serial.print(EP_Buffer[4]);
                    Debug_Serial.print(EP_Buffer[5]);
                    Debug_Serial.print(EP_Buffer[2]);
                    Debug_Serial.print(EP_Buffer[3]);
                    Debug_Serial.print(EP_Buffer[0]);
                    Debug_Serial.print(EP_Buffer[1]);
                Debug_Serial.println();
			}
		}
		/* EP储存的地址不幸出错，选择相信从AT指令读出来的，重新写入EP保存 */
		else
		{
			Debug_Serial.println("EP saved err, rewrite! <Rewrite_ID>");
			if (!LoRa_Para_Config.Save_LoRa_Addr((unsigned char *)WriteAddr)){
				// Serial.println("!LoRa_Para_Config.Save_LoRa_Addr((unsigned char *)WriteAddr)111");
				return false;
			}
		}
	}
	/* 如果是设备是第一次运行 */
	else
	{
		/*写入读出来的地址*/
		if (!LoRa_AT(RcvBuffer, false, AT_ADDR, WriteAddr)){
			// Serial.println("!LoRa_AT(RcvBuffer, false, AT_ADDR, WriteAddr)");
			return false;
		}

		if (!LoRa_Para_Config.Save_LoRa_Addr((unsigned char *)WriteAddr)){
			// Serial.println("!LoRa_Para_Config.Save_LoRa_Addr((unsigned char *)WriteAddr)222");
			return false;
		}
	}

	return true;
}
