==> Arrogantyunya/STM32_12Way_Irrigation_Controller/KeeganLu_BootV1.0/BootForSTM32F103RCT6/Third_Periph_Src/lora.c <==
#include "../Third_Periph_Inc/lora.h"
#include "../Third_Periph_Inc/at24Cxx.h"
#include "../Third_Periph_Inc/crc8.h"
#include "../Third_Periph_Inc/debug_uart.h"

void LoRa_GPIO_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;
	
	LORA_RESET_RCC_CLK_ENABLE;
	LORA_WAKEUP_RCC_CLK_ENABLE;
	LORA_ATCMD_RCC_CLK_ENABLE;
	LORA_PWR_RCC_CLK_ENABLE;
	
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
	/* 配置LoRa供电控制引脚 */
	GPIO_InitStruct.Pin = LORA_PWR_GPIO_PIN;
	HAL_GPIO_Init(LORA_PWR_GPIO_PORT, &GPIO_InitStruct);
	LORA_PWR_ON;
	
	/* 配置LoRa AT指令控制引脚 */
	GPIO_InitStruct.Pin = LORA_ATCMD_GPIO_PIN;
	HAL_GPIO_Init(LORA_ATCMD_GPIO_PORT, &GPIO_InitStruct);
	LORA_DEFAULT_PASS_MODE;	//在引脚上默认拉低，透传模式
	
	/* 配置LoRa唤醒引脚 */
	GPIO_InitStruct.Pin = LORA_WAKEUP_GPIO_PIN;
	HAL_GPIO_Init(LORA_WAKEUP_GPIO_PORT, &GPIO_InitStruct);
	LORA_NO_WAKEUP;	//拉低，默认正常工作
	
	/* 配置LoRa复位引脚 */
	GPIO_InitStruct.Pin = LORA_RESET_GPIO_PIN;
	HAL_GPIO_Init(LORA_RESET_GPIO_PORT, &GPIO_InitStruct);	
	LORA_NO_RESET;	//拉高，默认不复位
}

void LoRa_Shutdown(void)
{   
	LORA_PWR_OFF;
	LoRaSerial_End();
	
	HAL_GPIO_WritePin(LoRaSerial_Tx_GPIO_PORT, LoRaSerial_Tx_GPIO_PIN, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LoRaSerial_Rx_GPIO_PORT, LoRaSerial_Rx_GPIO_PIN, GPIO_PIN_RESET);
	LORA_RESET; 
}

unsigned char LoRa_AT(unsigned char *d_buf, unsigned char is_query, const char *cmd, const char *para)
{
	unsigned char rcv_len = 0;
	unsigned char return_type;
	unsigned char i;

  LoRa_Mode(AT);

	/*根据指令是查询指令还是设置参数指令，分别进入不同的指令函数*/
	if (is_query)
			return_type = LoRa_AT_Query_Cmd((unsigned char *)cmd, d_buf, &rcv_len);
	else
			return_type = LoRa_AT_Config_Cmd(cmd, para, d_buf);

	/*根据指令执行情况，返回对应状态。*/
	switch (return_type)
	{
			case LoRa_ERROR      : printf("Receipt ERROR...\n");  goto rcv_err; 
			case LoRa_Invalid    : printf("Involid!\n"); goto rcv_err;
			case LoRa_OK         : printf("Set param OK\n"); break;
			case LoRa_Bytes      : 	for (i = 0; i < rcv_len; i++)
																printf("%c", d_buf[i]);
															printf("\n");	
			break;
	}
	LoRa_Mode(PASS_THROUGH_MODE);
	return 1;
	
	rcv_err :
	{
		LoRa_Mode(PASS_THROUGH_MODE);
		return 0;
	}
}

unsigned char Rewrite_ID(void)
{
	unsigned char RcvBuffer[8];
	char EP_Buffer[9] = {0};
	char WriteAddr[9];
	unsigned char i;
	unsigned char VerifyFlag = 1;

	/* 读取LoRa通信地址 */
	if (!LoRa_AT(RcvBuffer, 1, AT_ADDR_, 0))
	{
			printf("Read LoRa ADDR Err <Rewrite_ID>\n");
			return 0;
	}

	for (i = 0; i < 8; i++)
	{
			WriteAddr[i] = RcvBuffer[i];

			if (WriteAddr[i] <= 9)
					WriteAddr[i] += '0';
			else if ((WriteAddr[i] >= 10) && (WriteAddr[i] <= 15))
					WriteAddr[i] += '7';
	}
	WriteAddr[8] = '\0';

	if (EP_Verify_LoRa_Addr_Flag())
	{
		printf("Verify LoRa Addr <Rewrite_ID>\n");

		/* 如果读出来的LoRa地址正确 */
		if(EP_Read_LoRa_Addr((unsigned char *)EP_Buffer))
		{
			for (i = 0; i < 8; i++)
			{
				/* 如果查询的LoRa地址和EP储存的不同 */
				if (WriteAddr[i] != EP_Buffer[i])
				{
					VerifyFlag = 0;
					break;
				}
			}
			/* 重新写入EP储存的正确的地址 */
			if (!VerifyFlag)
			{
				printf("LoRa addr for AT Error!, write EP addr to LoRa! <Rewrite_ID>\n");
				if(!LoRa_AT(RcvBuffer, 0, AT_ADDR, EP_Buffer))
				return 0;
			}
			else
			{
				printf("LoRa addr for AT Correct, OK <Rewrite_ID>\n");
			}
		}
		/* EP储存的地址不幸出错，选择相信从AT指令读出来的，重新写入EP保存 */
		else
		{
			printf("EP saved err, rewrite! <Rewrite_ID>\n");
			if (!EP_Save_LoRa_Addr((unsigned char *)WriteAddr))
			return 0;
		}
	}
  /* 如果是设备是第一次运行 */
	else
	{
		/*写入读出来的地址*/
		if(!LoRa_AT(RcvBuffer, 0, AT_ADDR, WriteAddr))
				return 0;

		if (!EP_Save_LoRa_Addr((unsigned char *)WriteAddr))
				return 0;
	}
  return 1;
}
